# vit_ap_vtop_api

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Constants.txt  DOCS.md  Dockerfile  README.md  Scrap.txt  app.py  fly.toml  main.py  mentor_details.json  pyproject.toml  requirements.txt  stu_profile.json  test.py  wsgi.py
.github/workflows/: deploy.yml
src/: __init__.py  app.py  attendance.py  attendence.py  biometric_log.py  build.py  captcha.py  captcha_solver.py  config.py  constants.py  dependencies.py  exam_schedule.py  general_outing.py  grade_history.py  handle_login.py  hod_details.py  login.py  main.py  marks.py  mentor_details.py  ncgpa_rank.py  parser.py  payment_receipts.py  payments.py  paytext.py  pending_payments.py  prelogin.py  print_payment_receipt.py  profile.py  session_manager.py  sessions.py  test.py  text.py  time_table.py  timetable.py  tools.py  tt.py  user_profile.py  weekend_outing.py
src/models/: api_models.py
src/parsers/: attendance_parser.py  attendence_parser.py  exam_schedule_parser.py  grades_details_parser.py  mentor_parser.py  payments_receipts_parser.py  pending_payments_parser.py  print_payment_parser.py  timetable_parser.py  weekend_outing_form_parser.py
src/routers/: student_data.py
src/utils/: extract_stu_pfp.py  find_captcha.py  find_csrf.py  find_hod_image.py  find_login_response.py  find_weekend_form_response.py  handle_client_exception.py  outing_response_checker.py
